--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -118,6 +118,7 @@ jobs:
       - id: push-existing-image-to-gar
         name: Push existing image to GAR
         run: |-
+             docker pull mozmeao/basket:${{ needs.build_and_publish_public_images.outputs.short_sha }}
              docker tag mozmeao/basket:${{ needs.build_and_publish_public_images.outputs.short_sha }} ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY}}/${{ env.IMAGE }}:${{ env.TAG }}
              docker push ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPOSITORY}}/${{ env.IMAGE }}:${{ env.TAG }}
 
